# BieszczadySDL

./: .gitignore  Bieszczady.sln  Bieszczady.txt  CMakeLists.txt  ToDoList.txt  main.cpp  settings.gradle.kts
Bieszczady/: Bieszczady.vcxproj  Bieszczady.vcxproj.filters  Collision.h  Rectangle.cpp  Rectangle.h  RigidBody.cpp  RigidBody.h  Vector.h  main.cpp
app/: build.gradle.kts
app/src/main/cpp/: app.cpp
app/src/main/headers/: app.h
app/src/test/cpp/: app_test.cpp
src/: Alive.cpp  Alive.h  Animation.h  Collision.h  Draw.cpp  Framework.cpp  Framework.h  GameObject.h  LoadBMP.cpp  QuadTree.cpp  QuadTree.h  Rectangle.cpp  Rectangle.h  Renderer.cpp  Renderer.h  RigidBody.cpp  RigidBody.h  Terrain.cpp  Terrain.h  Timer.h  Vector.cpp  Vector.h  control.cpp  displaySetup.cpp  main.cpp  settings.h
src/classes/: Alive.cpp  Alive.h  Animation.cpp  Animation.h  Framework.h  GameObject.h  PerlinNoise.cpp  PerlinNoise.h  QuadTree.cpp  QuadTree.h  Rectangle.cpp  Rectangle.h  RigidBody.cpp  Surfaces.cpp  Surfaces.h  Terrain.cpp  Terrain.h  Timer.h  Tool.h  Vector.h  Weapon.h
src/functions/: controller.cpp  controller.h  draw.cpp  draw.h  loadBMP.cpp  loadBMP.h  settings.h
